fixed invisible labels

--- a/zyt-app/src/app/components/login/login.component.scss
+++ b/zyt-app/src/app/components/login/login.component.scss
@@ -62,3 +62,7 @@ form {
     color: $white;
     width: 100%;
 }
+
+.black {
+  color: black;
+}
